# soc-alert-triage-llm

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DATASET_CARD.md  FAQ.md  MODEL_CARD.md  README.md  app.py  demo.py  gradio_demo.py  pyproject.toml  requirements.txt
.devcontainer/: .env.example  Dockerfile  devcontainer.json  docker-compose.yml  post-create.sh
.github/workflows/: ci.yml
configs/: train_lora.yaml  train_qlora.yaml
scripts/: train.py  upload_to_hub.py
src/soc_triage_agent/: __init__.py  adversarial.py  ait_dataset.py  data_generator.py  evaluation.py  feedback.py  model.py  prompts.py  soar_adapters.py
tests/: __init__.py  conftest.py  test_core.py  test_data_generator.py  test_evaluation.py
